# project-template

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  create_changelog.sh  dev_setup.py  pyproject.toml  run_tests.sh  setup_project_structure.py
scripts/: create_changelog.sh  dev_setup.py  release.sh  run_tests.sh
src/project_name/: __init__.py
tests/: test_suite.py  tests.py
