[project]
name = "prpoject_template"
version = "0.1.9-dev0"
description = "troi-lab project template."
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
]
exclude = [
  "**/doc", "**/docs", "**/test",
  "**/tests", "**/dist",
  "**/templates", "**/_templates",
  "**/images",  "**/_images",
  "**/data",  "**/_data"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "ruff>=0.13.0",
    "pre-commit>=4.3.0",
    "bump-my-version>=1.2.6",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = false

# if required, specify development sources (sitting in relative paths) with this block
#[tool.uv.sources]
#tirutils = { path = "../tirutils/tirutils" }
#tirutils_plus = { path = "../tirutils/tirutils_plus" }

[tool.ruff]
respect-gitignore = false
target-version = "py311"
extend-exclude = [".uv-cache"]
output-format = "concise"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]
ignore = [
  # for example
  #"D100",  # Missing docstring in public module
]
[tool.ruff.lint.per-file-ignores]
# for example
# E402 Module level import not at top of file
# "src/package/file.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
